# mobile

./: .gitignore  BUILD.md  PRIVACY.md  README.md  Readme-Custom-react-native-config-js.txt  android-db-service-ffi.code-workspace  app.json  build-ios-autofill-extension.edn  build.edn  db-service-ffi.code-workspace  deps.edn  index.ios.autofill.extension.js  index.js  justfile  metro.config.js  mobile-cljs-workspace.code-workspace  mobile-cljs-workspace.with-rustanalyzer-workspace  mobile-ios-extension-cljs-workspace.code-workspace  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.yarn/patches/: @react-native-community-cli-platform-ios-npm-13.6.9-aa1c8682ea.patch
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
cljs-ios-autofill-extension/src/onekeepass/ios/autofill/: app_lock.cljs  background.cljs  common_components.cljs  constants.cljs  core.cljs  entry_form.cljs  entry_list.cljs  (+4 more)
db-service-ffi/: .gitignore  Cargo.toml  README.md  build.rs  justfile  rustfmt.toml  uniffi.toml
db-service-ffi/src/: android.rs  app_lock.rs  app_preference.rs  app_state.rs  auto_open.rs  backup.rs  biometric_auth.rs  callback_service_provider.rs  commands.rs  db_backup_read.rs  db_service.udl  event_dispatcher.rs  file_util.rs  ios.rs  key_secure.rs  lib.rs  remote_storage.rs  secure_store.rs  udl_functions.rs  udl_types.rs  udl_uniffi_exports.rs  util.rs
db-service-ffi/src/android/: callback_services.rs  mod.rs  support_services.rs
db-service-ffi/src/ios/: app_group.rs  autofill_app_group.rs  bookmark.rs  callback_services.rs  mod.rs  support_services.rs
db-service-ffi/src/ios/autofill_app_group/: passkey_service.rs
db-service-ffi/src/remote_storage/: callback_service.rs  callback_service_provider.rs  mod.rs  secure_store.rs
db-service-ffi/src/remote_storage/storage_service/: calls.rs  macros.rs  mod.rs  server_connection_config.rs  sftp.rs  webdav.rs
docs/: FAQ.md
fastlane/metadata/android/de/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
ios/: OneKeePassMobile-Bridging-Header.h  Podfile
ios/OneKeePassAutoFill/: CredentialProviderViewController.swift  Info.plist  OkpAutofillReactViewController.swift  OneKeePassAutoFill-Bridging-Header.h  OneKeePassAutoFill.entitlements
ios/OneKeePassAutoFill/Base.lproj/: MainInterface.storyboard
ios/OneKeePassAutoFill/RnModules/: AutoFillEvents.swift  AutoFillEventsBridge.m  OkpDbService.swift  OkpDbServiceBridge.m
ios/OneKeePassAutoFill/Utils/: AutoFillDbServiceApi.swift  BackendEventDispatcher.swift  DbServiceApi.swift  MessageHandler.swift
ios/OneKeePassMobile/: AppDelegate.swift  BootSplash.storyboard  Info.plist  LaunchScreen.storyboard  OneKeePassMobile.entitlements  PrivacyInfo.xcprivacy  ReactViewController.swift  SceneDelegate.swift
ios/OneKeePassMobile.xcodeproj/: project.pbxproj
ios/OneKeePassMobile.xcodeproj/xcshareddata/xcschemes/: OneKeePassAutoFill.xcscheme  OneKeePassMobile.xcscheme
ios/OneKeePassMobile.xcworkspace/: contents.xcworkspacedata
ios/OneKeePassMobile/Images.xcassets/BootSplashLogo-5733b5.imageset/: Contents.json
ios/OneKeePassMobile/RnModules/: OkpDbService.swift  OkpDbServiceBridge.m  OkpDocumentPickerService.swift  OkpDocumentPickerServiceBridge.m  OkpError.swift  OkpEvents.swift  OkpEventsBridge.m  OkpExport.swift  OkpExportBridge.m
ios/OneKeePassMobile/Translations/: ar.json  de.json  en.json  es.json  fr.json  id.json  zh.json
ios/OneKeePassMobile/Utils/: ApiCallBackService.swift  AutoFillMessageHandler.swift  BackendEventDispatcher.swift  ClipboardHelper.swift  DbServiceAPI.swift  FileUtils.swift  OkpLogger.swift  SecureEnclaveServiceImpl.swift  SecureEnclaveServiceSupport.swift  SecureKeyService.swift  SecureStoreService.swift  XcodeConfiguration.swift
ios/OneKeePassMobileTests/: OneKeePassMobileTests.m
js/components/: KeyboardAvoidingDialog.js  RNPCustomization.js
js/components/examples/: IconTest.js  RNPExamples.js
js/localization/: i18n.js
js/localization/en/: translation.json
js/localization/es/: translation.json
js/localization/pl/: translation.json
patches/: @react-native-community+cli-platform-ios+12.3.2.patch  react-native+0.78.2.patch  react-native+0.81.5.patch  react-native-svg+15.1.0.patch  react-native-vector-icons+10.0.0.patch
src/: jey-readme.txt  user.cljs
src-cljs/: justfile  package.json  shadow-cljs.edn
src-cljs/.clj-kondo/: config.edn
src-cljs/cljs-main-app-src/.clj-kondo/: config.edn
src-cljs/js-components/components/: CustomSafeAreaView.js  RNPCustomization.js
src/.clj-kondo/: config.edn
src/onekeepass/mobile/: about.cljs  app_database_settings.cljs  app_lock.cljs  app_lock_settings.cljs  app_settings.cljs  appbar.cljs  autofill.cljs  background.cljs  background_common.cljs  background_remote_server.cljs  biometrics_settings.cljs  common_components.cljs  comp_classes.clj  constants.cljs  core.cljs  date_utils.cljs  entry_category.cljs  entry_form.cljs  entry_form_dialogs.cljs  entry_form_fields.cljs  entry_form_menus.cljs  entry_history_list.cljs  entry_list.cljs  group_form.cljs  icons_list.cljs  key_file_form.cljs  merging.cljs  okp_macros.clj  password_generator.cljs  remote_storage.cljs  rn_components.cljs  rs_config_form.cljs  rs_configs.cljs  rs_files_folders.cljs  save_error_dialog.cljs  scan_otp_qr.cljs  search.cljs  settings.cljs  start_page.cljs  totp.cljs  (+2 more)
src/onekeepass/mobile/events/: app_database_settings.cljs  app_lock.cljs  app_lock_settings.cljs  app_settings.cljs  autofill.cljs  common.cljs  dialogs.cljs  entry_category.cljs  entry_form.cljs  entry_form_auto_open.cljs  entry_form_common.cljs  entry_form_otp.cljs  entry_list.cljs  exporting.cljs  groups.cljs  key_file_form.cljs  merging.cljs  move_delete.cljs  native_events.cljs  new_database.cljs  open_database.cljs  password_generator.cljs  remote_storage.cljs  save.cljs  scan_otp_qr.cljs  search.cljs  settings.cljs
uniffi-bindgen/: Cargo.toml
(+169 files in other folders)
